# ksvg

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KF6PlasmaSvgConfig.cmake.in  KF6SvgConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  framesvgitemtest.cpp  framesvgtest.cpp  framesvgtest.h  i18ndcheck.sh  imagesettest.cpp  itemtest.cpp  itemtest.qml  svgitemtest.cpp  svgtest.cpp
autotests/data/plasma/desktoptheme/test_old_metadata_format_theme/: metadata.desktop.license
autotests/data/plasma/desktoptheme/testtheme/: element.svg.license  metadata.json.license
cmake/: Findresvg.cmake
declarativeimports/qtextracomponents/: qmenu.h
docs/: Doxyfile.local
po/ar/: libksvg6.po
po/ast/: libksvg6.po
po/bg/: libksvg6.po
po/ca/: libksvg5.po  libksvg6.po
po/ca@valencia/: libksvg6.po
po/cs/: libksvg6.po
po/de/: libksvg6.po
po/en_GB/: libksvg6.po
po/eo/: libksvg6.po
po/es/: libksvg6.po
po/eu/: libksvg6.po
po/fi/: libksvg6.po
po/fr/: libksvg6.po
po/ga/: libksvg6.po
po/gl/: libksvg6.po
po/he/: libksvg6.po
po/hi/: libksvg6.po
po/hu/: libksvg6.po
po/ia/: libksvg6.po
po/is/: libksvg6.po
po/it/: libksvg6.po
po/ja/: libksvg6.po
po/ka/: libksvg5.po  libksvg6.po
po/ko/: libksvg6.po
po/lt/: libksvg6.po
po/nl/: libksvg5.po  libksvg6.po
po/nn/: libksvg6.po
po/pl/: libksvg6.po
po/pt_BR/: libksvg6.po
po/ro/: libksvg6.po
po/ru/: libksvg6.po
po/sa/: libksvg6.po
po/sk/: libksvg6.po
po/sl/: libksvg6.po
po/sv/: libksvg6.po
po/tr/: libksvg6.po
po/ug/: libksvg6.po
po/uk/: libksvg5.po  libksvg6.po
po/zh_CN/: libksvg6.po
src/: CMakeLists.txt  Messages.sh
src/declarativeimports/: CMakeLists.txt  Mainpage.dox  corebindingsplugin.cpp  framesvgitem.cpp  framesvgitem.h  imagetexturescache.h  ksvgqml.qdoc  ksvgqml.qdocconf  plugins.qmltypes  quicktheme.cpp  quicktheme.h  svgitem.cpp  svgitem.h  types.h  units.h
src/ksvg/: .krazy  CMakeLists.txt  Mainpage.dox  README  config-ksvg.h.cmake  config-plasma.h.cmake  framesvg.cpp  framesvg.h  imageset.cpp  imageset.h  ksvg-index.qdoc  ksvg.qdoc  ksvg.qdocconf  svg.cpp  svg.h  theme.cpp  theme.h
src/ksvg/private/: effectwatcher.cpp  effectwatcher_p.h  framesvg_helpers.h  framesvg_p.h  imageset_p.cpp  imageset_p.h  resvg_p.h  svg_p.h  theme_p.cpp  theme_p.h
src/plasma/: CMakeLists.txt  framesvg.cpp  framesvg.h
src/plasma/private/: framesvg_p.h
src/plasmasvg/: CMakeLists.txt  Mainpage.dox  README  framesvg.cpp  framesvg.h  svg.cpp  svg.h  theme.cpp  theme.h
src/plasmasvg/private/: effectwatcher.cpp  effectwatcher_p.h  framesvg_helpers.h  framesvg_p.h  svg_p.h  theme_p.cpp  theme_p.h
src/shell/: view.h
src/tools/: CMakeLists.txt  apply-stylesheet.sh  currentColorFillFix.sh
src/tools/inkscape extensions/: plasmarename.inx
src/tools/split-plasma-svgs/: CMakeLists.txt  split-plasma-svgs.cpp
tests/: frames.qml  selected_svg.qml  shadows.qml  testborders.qml
